--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bytes": "^3.1.2",
     "call-bind-apply-helpers": "^1.0.2",
     "call-bound": "^1.0.4",
+    "cloudinary": "^2.7.0",
     "content-disposition": "^1.0.0",
     "content-type": "^1.0.5",
     "cookie": "^0.7.2",
@@ -45,6 +46,7 @@
     "mime-db": "^1.54.0",
     "mime-types": "^3.0.1",
     "ms": "^2.1.3",
+    "multer": "^2.0.1",
     "negotiator": "^1.0.0",
     "object-inspect": "^1.13.4",
     "on-finished": "^2.4.1",
